# ProtocolGenerator

./: AddOn.xsd  README.md  build_windows_exe.ps1  protocol.schema.json  pyproject.toml
.github/workflows/: tests.yml
config/: mapping.v1.yaml
config/rule_packs/: default.json  default.yaml  high_throughput.json  high_throughput.yaml
core/doc/: readme.md
deploy/manifests/: update.json  update.schema.json
doc/: backlog.md  canonical-model-reference.md  changelog.md  developer-guide.md  implementation-plan.md  manual_entry_autosave.json  mapping-config-reference.md  user-guide.md
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  make_release_manifest.py  update_addon_generation_goldens.py
src/addon_generator/: __about__.py  __init__.py
src/addon_generator/config/: __init__.py  models.py  rule_pack_loader.py  schema_validator.py
src/addon_generator/domain/: __init__.py  fragments.py  ids.py  issues.py  models.py
src/addon_generator/fragments/: __init__.py  assembler.py  registry.py
src/addon_generator/generators/: __init__.py  analytes_xml_generator.py  protocol_generator.py  protocol_json_generator.py
src/addon_generator/importers/: __init__.py  excel_importer.py  gui_mapper.py  (+1 more)
src/protocol_generator_gui/: __init__.py  main.py  persistence.py  schema_utils.py  validation.py  wizard_logic.py
tests/: AddOn_Input_92111_v03.xlsx  ProtocolFile.json  addon_status_draft_import1.json  addon_status_draft_import2.json  conftest.py  fixture_loader.py  test_persistence.py  test_schema_utils.py  test_validation.py  test_wizard_logic.py
tests/fixtures/: README.md  index.json
tests/integration/: test_addon_generation_pipeline.py  test_gui_workflow_end_to_end.py  test_ui_authoring_flow.py  test_wizard_flow.py
tests/unit/: test_about_metadata.py  test_addon_determinism_and_linkage.py  test_addon_domain.py  test_addon_validators.py  test_addon_xml_generation.py  test_basics_parser.py  test_build_script.py  test_default_derivation_service.py  test_dto_validator.py  test_excel_workbook_parser.py  test_fragment_registry.py  test_fragment_resolvers.py  test_generation_service.py  test_importers.py  test_input_merge_and_builder.py  test_json_assembly.py  test_main_imports.py  test_protocol_json_generator.py  test_rule_pack_loader.py  test_schema_and_step_requirements.py  test_schema_resource_resolution.py  test_schema_utils_more.py  test_update_flow.py  test_validation_engine.py
(+140 files in other folders)
