[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-generator-gui"
version = "0.1.0"
description = "Schema-driven desktop protocol file generator"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "openpyxl>=3.1",
]

[project.scripts]
protocol-generator-gui = "protocol_generator_gui.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=addon_generator --cov-report=term-missing --cov-fail-under=75"


[tool.coverage.run]
source = ["addon_generator"]
omit = [
  "src/addon_generator/__init__.py",
  "src/addon_generator/**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
